objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activities_conducted_on_tribal_land__c</fullName>
        <label>Activities Conducted On Tribal Land?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Billing Address - Street Address</description>
        <formula>BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_report_purpose_only__c</fullName>
        <label>Address</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agency_Registered_To__c</fullName>
        <description>Agency Registered To Mapped to account Name</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Registered To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Renewal_Report__c</fullName>
        <formula>Agency_Renewal__r.Renewal_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Renewal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Renewal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Renewal</label>
        <referenceTo>Agency_Renewal__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <description>Agency Name</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agents__c</fullName>
        <label>Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agriculture_Water__c</fullName>
        <label>Agriculture Water</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ground Water</fullName>
                </value>
                <value>
                    <fullName>Municipal Water</fullName>
                </value>
                <value>
                    <fullName>Surface Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associated_Businesses__c</fullName>
        <label>Associated Businesses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associated_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Location</label>
        <referenceTo>AssociatedLocation</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>Branch Name = Account Name</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business License</label>
        <referenceTo>BusinessLicense</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Billing City</description>
        <formula>BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_report_purpose_only__c</fullName>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Classification_of_Farm__c</fullName>
        <label>Classification_of_Farm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Production</fullName>
                </value>
                <value>
                    <fullName>Secondary Activities</fullName>
                </value>
                <value>
                    <fullName>Mixed Type Facility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coverered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coverered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBA_Name_Expiration_Date__c</fullName>
        <label>DBA Name Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <label>DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_last_contact__c</fullName>
        <label>Date of last contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_this_farm_manufacture_process__c</fullName>
        <label>Does this farm manufacture / process?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes, but limited</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exemption_Claimed__c</fullName>
        <label>Exemption Claimed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Produce &apos;Rarely Consumed Raw&apos;</fullName>
                </value>
                <value>
                    <fullName>All Produce Under Enforcement Discretion</fullName>
                </value>
                <value>
                    <fullName>All produce will be processed with a kill step</fullName>
                </value>
                <value>
                    <fullName>Farm no longer in operation</fullName>
                </value>
                <value>
                    <fullName>Qualified exempt (per CFR 112.5)</fullName>
                </value>
                <value>
                    <fullName>Total Produce Sales</fullName>
                    <label>Total Produce Sales &lt;$30,509/year</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Total Produce Sales &lt;$25k/year</fullName>
                    <isActive>false</isActive>
                    <label>Total Produce Sales &lt;$25k/year</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_Date_Report_purpose_Only__c</fullName>
        <formula>IF( ISPICKVAL( Business_License__r.Status , &apos;Active&apos;) , DATEVALUE(Business_License__r.PeriodEnd), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exp_Date__c</fullName>
        <label>Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expire_in_days__c</fullName>
        <formula>Exp_Date__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expire in days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FDA_Facility_Establishment_Identifier__c</fullName>
        <label>FDA Facility Establishment ID [FEI]</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FarmID__c</fullName>
        <externalId>true</externalId>
        <label>Farm Unique ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Farm_Readiness_Review__c</fullName>
        <label>On-Farm Readiness Review Completed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Grower Not Eligible (Already inspected)</fullName>
                </value>
                <value>
                    <fullName>Yes-Completed</fullName>
                </value>
                <value>
                    <fullName>Yes-Scheduled</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Farm_Region__c</fullName>
        <description>This field is used to get region of the farm from farm Id</description>
        <formula>TRIM( LEFT( FarmID__c , FIND( &quot;_&quot;, FarmID__c ) -1 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Farm Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Farm Representative</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Farm representative)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Farm_Size__c</fullName>
        <label>Farm Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Very Small</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Farm_in_region_with_food_safety_ties__c</fullName>
        <label>Farm in region with food safety ties</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flagged_for_inspection_in_fiscal_year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flagged for inspection in fiscal year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Food_Safety_Audits__c</fullName>
        <label>Food Safety Audits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>USDA GAP/Private GAP/Primus, etc</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Market Agreement (eg. LGMA)</fullName>
                </value>
                <value>
                    <fullName>Advisory Board (eg. CA Cantaloupe)</fullName>
                </value>
                <value>
                    <fullName>Advisory Board (ex. CA Cantaloupe)</fullName>
                    <isActive>false</isActive>
                    <label>Advisory Board (ex. CA Cantaloupe)</label>
                </value>
                <value>
                    <fullName>Market Agreement (ex. LGMA)</fullName>
                    <isActive>false</isActive>
                    <label>Market Agreement (ex. LGMA)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_House_Grow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In House Grow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_House_Harvest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In House Harvest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_House_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In House Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_House_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In House Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspected_by_CDPH_or_FDA__c</fullName>
        <label>Inspected by CDPH or FDA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes by CDPH</fullName>
                </value>
                <value>
                    <fullName>Yes by FDA</fullName>
                </value>
                <value>
                    <fullName>Yes but unsure which agency</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspection_Priority__c</fullName>
        <description>This field used capture in which priority farm will fall.</description>
        <label>Inspection Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Priority 4a</fullName>
                </value>
                <value>
                    <fullName>Priority 4b</fullName>
                </value>
                <value>
                    <fullName>Priority 4c</fullName>
                </value>
                <value>
                    <fullName>Priority 5</fullName>
                    <default>true</default>
                    <label>Priority 5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Completed_Inspection_Date__c</fullName>
        <description>This captures the Last completed Inspection Date for Farm</description>
        <label>Last Completed Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Email_Notification_Sent_Date__c</fullName>
        <label>Last Email Notification Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_OutBreak_Inspection_Date__c</fullName>
        <description>This field is used to calculate PDAT score for previous outbreak inspection</description>
        <label>Last OutBreak Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date__c</fullName>
        <label>Last Updated Date (By Farm Operator)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_Status__c</fullName>
        <label>Legacy Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C - Canceled</fullName>
                </value>
                <value>
                    <fullName>D - Delinquent</fullName>
                </value>
                <value>
                    <fullName>NA - Active-No Agents</fullName>
                </value>
                <value>
                    <fullName>N - New</fullName>
                </value>
                <value>
                    <fullName>S - Suspense</fullName>
                </value>
                <value>
                    <fullName>Y - Active</fullName>
                </value>
                <value>
                    <fullName>Y-RS - Active-Renewal Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Sole Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Account_Id__c</fullName>
        <description>This is a placeholder to store the original account record&apos;s Id</description>
        <label>Original Account Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outsourced_Grow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outsourced Grow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outsourced_Harvest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outsourced Harvest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outsourced_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outsourced Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outsourced_Pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outsourced Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_demographics__c</fullName>
        <label>Owner demographics</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian American</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian/Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Native Indian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDAT_Score__c</fullName>
        <label>PDAT Score</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Grower_Training_completed__c</fullName>
        <label>Produce Safety Alliance Grower Training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSP_Notes__c</fullName>
        <label>PSP Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Id__c</fullName>
        <label>Parent Account Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Pdat_Report_Name__c</fullName>
        <label>Pdat Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Safety_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Safety Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Language</label>
        <referenceTo>Preferred_Language__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_PSP_Communication_Language__c</fullName>
        <label>Preferred Communication Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Prefered_PSP_Communication_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Produce_Processed__c</fullName>
        <label>All produce processed with kill step?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Produce_Safety_Rule_Exemptions__c</fullName>
        <label>Produce Safety Rule Exemptions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Qualified exempt (per CFR 112.5)</fullName>
                </value>
                <value>
                    <fullName>All produce &apos;Rarely Consumed Raw</fullName>
                </value>
                <value>
                    <fullName>All produce under enforcement discretion (wine grapes, hops, almonds, pulse crops)</fullName>
                </value>
                <value>
                    <fullName>All produce will be processed with a kill step</fullName>
                </value>
                <value>
                    <fullName>Total produce sales &lt;$30,509/year</fullName>
                </value>
                <value>
                    <fullName>Farm no longer in operation</fullName>
                </value>
                <value>
                    <fullName>No covered crops grown or no covered activities conducted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Records_supporting_qualified_exemption__c</fullName>
        <label>Records supporting qualified exemption?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <externalId>true</externalId>
        <label>Registration Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Registration_Type__c</fullName>
        <description>Agency registration type.</description>
        <label>Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Process__c</fullName>
        <label>Renewal Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Registration_Number__c</fullName>
        <externalId>true</externalId>
        <label>Renewal Registration Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It should be on old record if it is under renewal process</description>
        <label>Renewal Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Billing State</description>
        <formula>BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_report_pupose_only__c</fullName>
        <label>State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAP_Notes__c</fullName>
        <label>TAP Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verification_Completion_Date__c</fullName>
        <label>Verification Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verified_Farm_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verified at the farm by</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PSP Compliance Specialist</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PSP Compliance Team Supervisor</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PSP Field Inspector</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PSP Field Team Supervisor</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PSP Outbreak Specialist</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PSP Program Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PSP Support Team</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PSP Training and Standardization Specialist</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PSR and Outreach Specialist</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PSP System Admin</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Reverify</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>